# rest-wake

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
backend/: .env  .gitignore  Cargo.toml  LICENSE  README.md
backend/migration/src/: m20220101_000001_create_device_table.rs
backend/src/: main.rs
backend/src/models/: mod.rs
backend/src/network/: mac_address.rs  magic_packet.rs
backend/src/routes/: device.rs  wake.rs
migration/src/: lib.rs
migrations/: 202309112044_create_devices.sql
src/: main.rs
src/models/: device.rs  prelude.rs
src/network/: mac_address.rs  magic_packet.rs  mod.rs
src/routes/: device.rs  devices.rs  mod.rs  wake.rs
