[package]
name = "rest-wake"
version = "1.0.0"
edition = "2021"
authors = ["Niklas Krebs"]
description = "RestAPI to start local network devices via WakeOnLan protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10"
log = "0.4"
