[package]
name = "rest-wake"
version = "1.0.2"
edition = "2021"
authors = ["Niklas Krebs", "Moritz Putzenlechner"]
description = "RestAPI to start local network devices via WakeOnLan protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0.188" }
serde_json = "1.0.107"
sea-orm = { version = "0.12.3", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "migration" }
dotenv = "0.15.0"